--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 annotated-types==0.7.0
+anyio==4.10.0
 asttokens==3.0.0
 attrs==24.2.0
 blinker==1.9.0
@@ -9,10 +10,15 @@ charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
 debugpy==1.8.9
 decorator==5.1.1
+distro==1.9.0
+et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 executing==2.1.0
+fonttools==4.59.2
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.10
@@ -24,30 +30,40 @@ google-generativeai==0.8.3
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
 grpcio-status==1.68.1
+h11==0.16.0
+httpcore==1.0.9
 httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
 importlib_metadata==8.5.0
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.18.1
 jedi==0.19.2
 Jinja2==3.1.4
+jiter==0.11.0
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 narwhals==1.15.2
 nest-asyncio==1.6.0
 numpy==2.0.2
+openai==1.107.3
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pillow==11.0.0
 platformdirs==4.3.6
+plotly==6.3.0
 prompt_toolkit==3.0.48
 proto-plus==1.25.0
 protobuf==5.29.0
@@ -74,6 +90,7 @@ scikit-learn==1.5.2
 scipy==1.13.1
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 stack-data==0.6.3
 streamlit==1.40.2
 tenacity==9.0.0
