--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kneed==0.8.5
 kiwisolver==1.4.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
